tests/good/example-mutual-recursion.rat
fn Even (x: Int, odd: fn (Int) -> Boolean) -> Boolean {
  if (x == 0) {
    return True;
  } else {
    return odd(x - 1);
  }
}

fn Odd (x: Int) -> Boolean {
  if (x == 1) {
    return True;
  } else {
    return not Even(x, Odd);
  }
}

fn Main () -> Void {
  Println(ShowBoolean(Odd(101)));
  return;
}
