tests/bad/example-e12.rat
fn Main () -> Void {
  let a = True;
  let a = "napis";
  return;
}
